// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders a list of results including vehicles and ghosts 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r0:"
        className="m-card m-card--white m-search-results__result m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  Object {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="m-vehicle-icon m-vehicle-icon--large ghost early-red"
                >
                  <rect
                    className="m-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    0123
                  </text>
                  <g
                    transform="scale(0.7) translate(-24,-23)"
                  >
                    <path
                      className="m-vehicle-icon__ghost-highlight"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <path
                      className="m-vehicle-icon__ghost-body"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                  </g>
                  <text
                    className="m-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={8}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="m-card__left-content"
          >
            <div
              className="m-card__top-row"
            >
              <div
                className="m-card__title"
                id="card-label-:r0:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="m-route-variant-name undefined"
                >
                  <output
                    aria-label="Route & Variant"
                    className="m-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                   
                  <output
                    aria-label="Headsign"
                    className="m-route-variant-name__headsign"
                  >
                    headsign
                  </output>
                </output>
              </div>
            </div>
            <div
              className="m-card__contents"
            >
              <div
                className="m-properties-list"
              >
                <table
                  className="m-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        123-0123
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r1:"
        className="m-card m-card--white m-search-results__result m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  Object {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
                >
                  <rect
                    className="m-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    1
                  </text>
                  <path
                    className="m-vehicle-icon__triangle"
                    d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                    data-testid="vehicle-triangle"
                    transform="scale(1) rotate(0) translate(-24,-22)"
                  />
                  <text
                    className="m-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={14}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="m-card__left-content"
          >
            <div
              className="m-card__top-row"
            >
              <div
                className="m-card__title"
                id="card-label-:r1:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="m-route-variant-name undefined"
                >
                  <output
                    aria-label="Route & Variant"
                    className="m-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                   
                  <output
                    aria-label="Headsign"
                    className="m-route-variant-name__headsign"
                  >
                    Forest Hills
                  </output>
                </output>
              </div>
            </div>
            <div
              className="m-card__contents"
            >
              <div
                className="m-properties-list"
              >
                <table
                  className="m-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        run-1
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Vehicle
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        v1-label
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property m-properties-list__property--operator fs-mask"
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Operator
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        SMITH #op1
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property m-properties-list__property--last-login"
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Last Login
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        4 hr 3 min; 1:38 PM
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders a selected result card 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <div
        aria-current={false}
        aria-labelledby="card-label-:r5:"
        className="m-card m-card--white m-search-results__result m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  Object {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="m-vehicle-icon m-vehicle-icon--large ghost early-red"
                >
                  <rect
                    className="m-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    0123
                  </text>
                  <g
                    transform="scale(0.7) translate(-24,-23)"
                  >
                    <path
                      className="m-vehicle-icon__ghost-highlight"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <path
                      className="m-vehicle-icon__ghost-body"
                      d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
                      strokeLinejoin="round"
                    />
                    <ellipse
                      className="m-vehicle-icon__ghost-eye"
                      cx="19.73"
                      cy="22.8"
                      rx="3.11"
                      ry="3.03"
                    />
                    <ellipse
                      className="m-vehicle-icon__ghost-eye"
                      cx="35.29"
                      cy="22.8"
                      rx="3.11"
                      ry="3.03"
                    />
                  </g>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="m-card__left-content"
          >
            <div
              className="m-card__top-row"
            >
              <div
                className="m-card__title"
                id="card-label-:r5:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="m-route-variant-name undefined"
                >
                  <output
                    aria-label="Route & Variant"
                    className="m-route-variant-name__route-id"
                  >
                    1_
                  </output>
                   
                  <output
                    aria-label="Headsign"
                    className="m-route-variant-name__headsign"
                  >
                    headsign
                  </output>
                </output>
              </div>
            </div>
            <div
              className="m-card__contents"
            >
              <div
                className="m-properties-list"
              >
                <table
                  className="m-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        123-0123
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        aria-current={true}
        aria-labelledby="card-label-:r6:"
        className="m-card m-card--white m-search-results__result m-card--read m-card--selected"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__icon"
          >
            <div>
              <svg
                role="img"
                style={
                  Object {
                    "height": 64,
                    "width": 64,
                  }
                }
                viewBox="-32 -20 64 64"
              >
                <title>
                  Vehicle Status Icon
                </title>
                <g
                  className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
                >
                  <rect
                    className="m-vehicle-icon__label-background"
                    height={24}
                    rx={12}
                    ry={12}
                    width={64}
                    x={-32}
                    y={19}
                  />
                  <text
                    className="m-vehicle-icon__label m-vehicle-icon__label--normal"
                    dominantBaseline="central"
                    textAnchor="middle"
                    x="0"
                    y={31}
                  >
                    1
                  </text>
                  <path
                    className="m-vehicle-icon__triangle"
                    d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
                    data-testid="vehicle-triangle"
                    transform="scale(1) rotate(0) translate(-24,-22)"
                  />
                  <text
                    className="m-vehicle-icon__variant"
                    dominantBaseline="alphabetic"
                    textAnchor="middle"
                    x={0}
                    y={14}
                  >
                    X
                  </text>
                </g>
              </svg>
            </div>
          </div>
          <div
            className="m-card__left-content"
          >
            <div
              className="m-card__top-row"
            >
              <div
                className="m-card__title"
                id="card-label-:r6:"
              >
                <output
                  aria-label="Route Variant Name"
                  className="m-route-variant-name undefined"
                >
                  <output
                    aria-label="Route & Variant"
                    className="m-route-variant-name__route-id"
                  >
                    39_X
                  </output>
                   
                  <output
                    aria-label="Headsign"
                    className="m-route-variant-name__headsign"
                  >
                    Forest Hills
                  </output>
                </output>
              </div>
            </div>
            <div
              className="m-card__contents"
            >
              <div
                className="m-properties-list"
              >
                <table
                  className="m-properties-list__table"
                >
                  <tbody>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Run
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        run-1
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property "
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Vehicle
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        v1-label
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property m-properties-list__property--operator fs-mask"
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Operator
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        SMITH #op1
                      </td>
                    </tr>
                    <tr
                      className="m-properties-list__property m-properties-list__property--last-login"
                    >
                      <td
                        className="m-properties-list__property-label"
                      >
                        Last Login
                      </td>
                      <td
                        className="m-properties-list__property-value"
                      >
                        4 hr 3 min; 1:38 PM
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders no results 1`] = `
<div
  className="m-search-results"
>
  <div
    className="m-search-results__none"
  >
    <div
      className="m-search-results__heading"
    >
      No Search Results
    </div>
    <p>
      There were no matching results found for “
      test
      ”. Please try again using numbers or last names only.
    </p>
    <p>
      Please note that at this time search is limited to active vehicles and logged-in personnel.
    </p>
    <button
      className="m-search-results__clear-search-button"
      onClick={[Function]}
    >
      Clear search
    </button>
  </div>
</div>
`;
